# uv-project-setup

./: README.md
packaged-app/: pyproject.toml
packaged-app/src/packaged_app/: main.py
simple-app/: main.py  pyproject.toml
